RESOLVED FIXED303460
ReadableStream readers should not be GCed if having pending read requests for native sources
https://bugs.webkit.org/show_bug.cgi?id=303460
Summary ReadableStream readers should not be GCed if having pending read requests for...
youenn fablet
Reported 2025-12-03 00:39:33 PST
ReadableStream readers should not be GCed if having pending read requests for native sources. This should allow to fix streams/blob-and-tee.html test
Attachments
Radar WebKit Bug Importer
Comment 1 2025-12-03 00:39:43 PST
youenn fablet
Comment 2 2025-12-03 01:48:04 PST
EWS
Comment 3 2025-12-03 07:42:03 PST
Committed 303833@main (319a82c01482): <https://commits.webkit.org/303833@main> Reviewed commits have been landed. Closing PR #54764 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.